AC_PREREQ([2.63])
AC_INIT([mecstat],[1.0],[fr.sanfilippo@gmail.com])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE([1.0 no-define foreign subdir-objects])
AM_CONFIG_HEADER(src/config.hpp)
AC_CONFIG_MACRO_DIR([m4])
AC_CANONICAL_HOST

AC_PROG_CXX
AC_CHECK_HEADERS([stdlib.h])
AC_HEADER_STDBOOL
AC_CONFIG_FILES(Makefile)

AC_OUTPUT
