ACLOCAL_AMFLAGS=-I m4

bin_PROGRAMS=$(top_builddir)/bin/main
__top_builddir__bin_main_SOURCES= \
        src/action.cpp \
        src/close.cpp \
        src/data.cpp \
        src/debug.cpp \
        src/geometry.cpp \
        src/init.cpp \
        src/main.cpp \
        src/meta.cpp \
        src/random.cpp
