ACLOCAL_AMFLAGS=-I m4

bin_PROGRAMS=$(top_builddir)/bin/main
__top_builddir__bin_main_SOURCES= \
        src/action.cpp \
        src/close.cpp \
        src/corr.cpp \
        src/data.cpp \
        src/debug.cpp \
        src/geometry.cpp \
        src/hmc.cpp \
        src/init.cpp \
        src/lambda.cpp \
        src/main.cpp \
        src/metro.cpp \
        src/micro.cpp \
        src/overheat.cpp \
        src/parameters.cpp \
        src/random.cpp \
        src/staples.cpp \
        src/stout.cpp \
        src/topology.cpp \
        src/zeta.cpp
